fix sticky header not working due to overflowing text

--- a/src/containers/Presskit/Content.module.scss
+++ b/src/containers/Presskit/Content.module.scss
@@ -29,7 +29,9 @@
       font-size: var(--font-size-h6);    
     }
   }
-
+  p {
+    word-break: break-word;
+  }
 }
 
 .txtRoot {
